force-app/main/default/objects/numm__CosAccountingVoucher__c/numm__CosAccountingVoucher__c.object-meta.xml
<CustomObject>
    <description>Objet des écritures analytiques</description>
    <label>Ecriture Analytique</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Ecriture Analytique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecritures Analytiques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>