force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__Analytic1__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytic1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where IdAxis =1</description>
    <inlineHelpText>Sélectionner la valeur de analytique de l&#39;axe 1</inlineHelpText>
    <label>Analytique 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__CostAccountingValues__c.numm__IdAxis__r.numm__RelatedAnalytics__c</field>
            <operation>equals</operation>
            <value>Analytique 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipLabel>Ecritures Analytiques (Analytique 1)</relationshipLabel>
    <relationshipName>Pi_ces_Analytiques</relationshipName>
    <type>Lookup</type>
</CustomField>