force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__BaselineCredit__c.field-meta.xml
<CustomField>
    <fullName>numm__BaselineCredit__c</fullName>
    <label>Credit Origine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>