force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__BeginSubscription__c.field-meta.xml
<CustomField>
    <fullName>numm__BeginSubscription__c</fullName>
    <inlineHelpText>Préciser la date à laquelle commence la charge ou le produit à étaler sur plusieurs mois.</inlineHelpText>
    <label>Date début d&#39;abonnement</label>
    <type>Date</type>
</CustomField>