force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__Credit_piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Credit_piece__c</fullName>
    <label>Credit pièce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>