force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__CreditEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__CreditEntity__c</fullName>
    <formula>IF( ISNULL( numm__Credit_piece__c ), 0, numm__EcritureGenerale__r.numm__Piece__r.numm__ExchangeRate__c  * numm__Credit_piece__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>