force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__Date_Abt__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_Abt__c</fullName>
    <label>Date Traitement abonnement</label>
    <type>Date</type>
</CustomField>