force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__DebitEntity__c.field-meta.xml
<CustomField>
    <fullName>numm__DebitEntity__c</fullName>
    <formula>IF(ISNULL( numm__Debit__c ),0,  numm__EcritureGenerale__r.numm__Piece__r.numm__ExchangeRate__c  * numm__Debit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Entité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>