force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__EcrAAbntOrigine__c.field-meta.xml
<CustomField>
    <fullName>numm__EcrAAbntOrigine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne Analytique origine Abt</label>
    <referenceTo>numm__CosAccountingVoucher__c</referenceTo>
    <relationshipLabel>Ecritures Analytiques</relationshipLabel>
    <relationshipName>Ecritures_Analytiques</relationshipName>
    <type>Lookup</type>
</CustomField>