force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__EcritureGenerale__c.field-meta.xml
<CustomField>
    <fullName>numm__EcritureGenerale__c</fullName>
    <label>Ecriture générale</label>
    <referenceTo>numm__VoucherTransaction__c</referenceTo>
    <relationshipLabel>Ecritures Analytiques</relationshipLabel>
    <relationshipName>CostAccountingVoucher</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>