force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__EndTransaction__c.field-meta.xml
<CustomField>
    <fullName>numm__EndTransaction__c</fullName>
    <inlineHelpText>Préciser la date à laquelle se termine l&#39;abonnement à étaler sur plusieurs mois</inlineHelpText>
    <label>Date de fin d&#39;abonnement</label>
    <type>Date</type>
</CustomField>