force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__IsSamePeriode__c.field-meta.xml
<CustomField>
    <fullName>numm__IsSamePeriode__c</fullName>
    <formula>IF(AND(MONTH(numm__BeginSubscription__c) ==MONTH( numm__EndTransaction__c ) ,Year(numm__BeginSubscription__c) ==Year(numm__EndTransaction__c )),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSamePeriode</label>
    <type>Checkbox</type>
</CustomField>