force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__Nom_axe_1__c.field-meta.xml
<CustomField>
    <fullName>numm__Nom_axe_1__c</fullName>
    <formula>numm__Analytic1__r.numm__IdAxis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom axe 1</label>
    <type>Text</type>
</CustomField>