force-app/main/default/objects/numm__CosAccountingVoucher__c/fields/numm__Tech_IdentifiantUniqueFacture__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_IdentifiantUniqueFacture__c</fullName>
    <label>Tech_IdentifiantUniqueFacture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>