force-app/main/default/objects/numm__CosAccountingVoucher__c/validationRules/numm__ValidDateAbbonnement.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__ValidDateAbbonnement</fullName>
    <active>true</active>
    <errorConditionFormula>numm__BeginSubscription__c  &gt; numm__EndTransaction__c</errorConditionFormula>
    <errorMessage>La date de début d&#39;abonnement doit être inférieure à la date de fin d&#39;abonnement.</errorMessage>
</ValidationRule>